[package]
name = "rustydomain"
version = "0.9.0"
authors = ["Marco S. <marcuccio.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
